src/snapshots/interpreter__parser__tests__text@newline.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `a \n b`"
---
stmts:
  - Text: a
  - Token: NewLine
  - Text: b
errors: []

