src/snapshots/interpreter__parser__tests__text@parbreak.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `a \n\n b`"
---
stmts:
  - Text: a
  - ParBreak
  - Text: b
errors: []

