src/snapshots/interpreter__parser__tests__text@space.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `a b`"
---
stmts:
  - Text: a
  - Token: Space
  - Text: b
errors: []

