src/snapshots/interpreter__parser__tests__unknown_envs@simple_empty.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\begin{asfs} \\end{asfs}`"
---
stmts:
  - Env:
      name: asfs
      children:
        - Token: Space
      is_alt: false
      kind: Regular
      start_end: ~
errors: []

