src/snapshots/interpreter__parser__tests__unknown_macros@m.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\asdfr{pkg}`"
---
stmts:
  - Macro:
      name: asdfr
  - Block:
      - Text: pkg
errors: []

